Reorganized the project, finished starship parsing. Tested with Azure Table storage.

--- a/StarWars5e.Storage/StarWars5e.Storage.csproj
+++ b/StarWars5e.Storage/StarWars5e.Storage.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.6.1" />
+    <PackageReference Include="Autofac" Version="4.9.2" />
+    <PackageReference Include="Azure.TableStorage.Repository" Version="2.0.0.10" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
